chore: update package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vueblocks/vue-use",
+  "name": "@vueblocks/vue-use-utilities",
   "version": "0.1.0",
   "description": "A collection of Vue composition-api utilities",
   "scripts": {
