--- a/packages/vuex/package.json
+++ b/packages/vuex/package.json
@@ -17,7 +17,9 @@
   "keywords": [
     "vue",
     "vue-use",
-    "vuex"
+    "vuex",
+    "composition-api",
+    "utilities"
   ],
   "author": "xiaoluoboding<https://github.com/xiaoluoboding>",
   "license": "MIT",
