--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,5 +30,6 @@
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.20",
     "vue-demi": "^0.4.5"
-  }
+  },
+  "gitHead": "2fac13283cfe739702f1dabf3ae1d9d9ce48cbe3"
 }
