--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,8 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.1.2"
+  "version": "0.1.2",
+  "publishConfig": {
+    "access": "public"
+  }
 }
