--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@vueblocks/vue-use-utilities",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A collection of Vue composition-api utilities",
   "scripts": {
     "dev": "vuepress dev docs",
     "build:docs": "vuepress build docs",
     "build:lib": "rollup -c rollup.config.js",
     "test": "jest"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
