--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -10,6 +10,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vueblocks/vue-use.git"
@@ -33,5 +36,5 @@
   "devDependencies": {
     "axios": "^0.21.0"
   },
-  "gitHead": "5195e71208c5c894561330b7f1da9292da925816"
+  "gitHead": "19fec27b41f71b70a73f0afd37180c39bb362827"
 }
