--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vueblocks/vue-use.git"
@@ -31,5 +34,5 @@
     "@vue/composition-api": "^1.0.0-beta.20",
     "vue-demi": "^0.4.5"
   },
-  "gitHead": "5195e71208c5c894561330b7f1da9292da925816"
+  "gitHead": "19fec27b41f71b70a73f0afd37180c39bb362827"
 }
