--- a/examples/vue3-demo/package.json
+++ b/examples/vue3-demo/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueblocks/vue-use-vuex": "^0.1.5",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
@@ -44,7 +45,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "@typescript-eslint/no-explicit-any": 0
+    }
   },
   "browserslist": [
     "> 1%",
