--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.3.4",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
     "@vue/test-utils": "^1.1.1",
