feat: add global compile-time constants

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "rootDir": ".",
     "baseUrl": ".",
     "types": [
-      "jest"
+      "jest",
+      "node"
     ],
     "lib": [
       "esnext",
