--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "@vueblocks/vue-use-utilities",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "A collection of Vue composition-api utilities",
   "scripts": {
-    "dev": "vuepress dev docs",
-    "build:docs": "vuepress build docs",
-    "build:lib": "rollup -c rollup.config.js",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "build": "rollup -c rollup.config.js",
     "release": "lerna publish",
-    "test": "jest"
+    "test": "jest --coverage",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.4",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
+    "@types/node": "^14.14.10",
     "@vue/test-utils": "^1.1.1",
     "axios": "^0.21.0",
+    "esbuild": "^0.8.18",
+    "esbuild-register": "^1.1.1",
     "eslint": "^7.14.0",
     "eslint-plugin-jest": "^24.1.3",
     "esm": "^3.2.25",
