--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vueblocks/vue-use.git"
+    "url": "git+https://github.com/vueblocks/vue-use-utilities.git"
   },
   "keywords": [
     "vue",
