--- a/examples/vue2-demo/package.json
+++ b/examples/vue2-demo/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-beta.20",
+    "@vue/composition-api": "^1.0.0-beta.21",
+    "@vueblocks/vue-use-core": "^0.1.7",
     "@vueblocks/vue-use-vuex": "^0.1.9",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
