--- a/examples/vue3-demo/package.json
+++ b/examples/vue3-demo/package.json
@@ -1,4 +1,4 @@
-9{
+{
   "name": "vue3-demo",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueblocks/vue-use-core": "^0.1.7",
     "@vueblocks/vue-use-vuex": "^0.1.9",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
