--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.4",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/jest": "^26.0.19",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.20",
     "@vue/test-utils": "^1.1.2",
+    "@vueblocks/vue-use-core": "^0.1.9",
+    "autoprefixer": "^9",
     "axios": "^0.21.1",
     "esbuild": "^0.8.29",
     "esbuild-register": "^1.2.1",
@@ -25,11 +28,13 @@
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "lodash": "^4.17.20",
+    "postcss": "^7",
     "rollup": "^2.36.0",
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "screenfull": "^5.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "vue": "^2.6.12",
