--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@juggle/resize-observer": "^3.2.0",
     "@vue/composition-api": "^1.0.0-beta.25",
+    "color2k": "^1.1.1",
     "dayjs": "^1.10.2",
     "keymaster": "^1.6.2",
     "lodash.debounce": "^4.0.8",
