--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vueblocks/vue-use-core",
-  "description": "A Collection of Vue Compositon API Utilities",
+  "description": "A Collection of Vue Compositon API Utilities.",
   "version": "0.2.4",
   "main": "lib/index.cjs.js",
   "types": "lib/index.d.ts",
@@ -17,6 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/vueblocks/vue-use-utilities.git"
   },
+  "homepage": "https://github.com/vueblocks/vue-use-utilities",
   "keywords": [
     "vue",
     "vue-use",
