--- a/examples/vue2-demo/package.json
+++ b/examples/vue2-demo/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-beta.25",
-    "@vueblocks/vue-use-core": "^0.2.1",
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "@vueblocks/vue-use-core": "^0.2.3",
     "@vueblocks/vue-use-vuex": "^0.2.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
