--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@vueblocks/vue-use-core": "^0.2.5",
     "autoprefixer": "^9",
     "axios": "^0.21.1",
-    "color2k": "^1.1.1",
+    "color2k": "^1.2.2",
     "dayjs": "^1.10.3",
     "esbuild": "^0.8.29",
     "esbuild-register": "^1.2.1",
@@ -36,7 +36,6 @@
     "jest": "^26.6.3",
     "keymaster": "^1.6.2",
     "lerna": "^3.22.1",
-    "lodash": "^4.17.20",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "mitt": "^2.1.0",
@@ -47,6 +46,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "screenfull": "^5.1.0",
+    "stateshot": "^1.3.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
