--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/jest": "^26.0.19",
     "@types/keymaster": "^1.6.28",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^14.14.20",
@@ -36,6 +37,7 @@
     "jest": "^26.6.3",
     "keymaster": "^1.6.2",
     "lerna": "^3.22.1",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "mitt": "^2.1.0",
