--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,14 +29,16 @@
   "sideEffects": false,
   "dependencies": {
     "@juggle/resize-observer": "^3.2.0",
-    "@vue/composition-api": "^1.0.0-beta.25",
+    "@vue/composition-api": "^1.0.0-rc.1",
     "color2k": "^1.1.1",
     "dayjs": "^1.10.2",
     "keymaster": "^1.6.2",
+    "@types/lodash.clonedeep": "^4.5.6",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "screenfull": "^5.1.0",
-    "vue-demi": "^0.5.4"
+    "stateshot": "^1.3.3",
+    "vue-demi": "^0.6.0"
   },
   "gitHead": "19fec27b41f71b70a73f0afd37180c39bb362827"
 }
