--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^14.14.20",
     "@vue/test-utils": "^1.1.2",
-    "@vueblocks/vue-use-axios": "^0.2.5",
-    "@vueblocks/vue-use-core": "^0.2.5",
+    "@vueblocks/vue-use-axios": "^0.2.6",
+    "@vueblocks/vue-use-core": "^0.2.6",
     "autoprefixer": "^9",
     "axios": "^0.21.1",
-    "color2k": "^1.2.2",
+    "color2k": "^1.2.3",
     "dayjs": "^1.10.3",
     "esbuild": "^0.8.29",
     "esbuild-register": "^1.2.1",
@@ -41,6 +41,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "mitt": "^2.1.0",
+    "number-precision": "^1.5.0",
     "postcss": "^7",
     "rollup": "^2.36.0",
     "rollup-plugin-dts": "^2.0.1",
@@ -57,7 +58,7 @@
     "vuex": "^3.6.0"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.1",
+    "@vue/composition-api": "^1.0.0-rc.2",
     "vue-demi": "^0.6.0"
   }
 }
