--- a/packages/vuex/package.json
+++ b/packages/vuex/package.json
@@ -29,14 +29,14 @@
   "license": "MIT",
   "sideEffects": false,
   "peerDependencies": {
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.2"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-beta.24",
-    "vue-demi": "^0.5.4"
+    "@vue/composition-api": "^1.0.0-rc.3",
+    "vue-demi": "^0.7.1"
   },
   "devDependencies": {
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.2"
   },
   "gitHead": "19fec27b41f71b70a73f0afd37180c39bb362827"
 }
