--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.2.10",
   "description": "A collection of Vue composition-api utilities",
   "scripts": {
+    "docs:dev:v2": "npm run dev:v2 --prefix docs",
+    "docs:dev:v3": "npm run dev:v3 --prefix docs",
+    "docs:build:v2": "npm run build:v2 --prefix docs",
+    "docs:build:v3": "npm run build:v3 --prefix docs",
     "docs:deploy": "sh deploy.sh",
     "build": "rollup -c rollup.config.js",
     "release": "lerna publish",
