--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.10",
   "description": "A collection of Vue composition-api utilities",
   "scripts": {
-    "docs:dev:v2": "npm run dev:v2 --prefix docs",
-    "docs:dev:v3": "npm run dev:v3 --prefix docs",
+    "docs:dev:v2": "vue-demi-switch 2 && npm run dev:v2 --prefix docs",
+    "docs:dev:v3": "vue-demi-switch 3 vue3 && npm run dev:v3 --prefix docs",
     "docs:build:v2": "npm run build:v2 --prefix docs",
     "docs:build:v3": "npm run build:v3 --prefix docs",
     "docs:deploy": "sh deploy.sh",
@@ -50,6 +50,7 @@
     "typescript": "^4.2.3",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
+    "vue3": "npm:vue@3",
     "vuex": "^3.6.2"
   },
   "dependencies": {
