--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -32,12 +32,10 @@
     "axios": "^0.21.0"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-beta.24",
+    "@vue/composition-api": "^1.0.0-rc.3",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "vue-demi": "^0.5.4"
-  },
-  "devDependencies": {
+    "vue-demi": "^0.7.1",
     "axios": "^0.21.1"
   },
   "gitHead": "19fec27b41f71b70a73f0afd37180c39bb362827"
