--- a/package.json
+++ b/package.json
@@ -15,46 +15,23 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@juggle/resize-observer": "^3.3.0",
-    "@rollup/plugin-replace": "^2.4.1",
+    "@rollup/plugin-replace": "^3.0.0",
     "@types/jest": "^26.0.20",
-    "@types/keymaster": "^1.6.28",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/lodash.debounce": "^4.0.6",
-    "@types/lodash.throttle": "^4.1.6",
-    "@types/node": "^14.14.32",
-    "@vue/test-utils": "^1.1.3",
-    "axios": "^0.21.1",
-    "color2k": "^1.2.4",
+    "@types/node": "^16.4.0",
+    "@vue/test-utils": "^1.2.1",
     "esbuild": "^0.8.29",
     "esbuild-register": "^1.2.1",
     "eslint": "^7.17.0",
     "eslint-plugin-jest": "^24.1.3",
     "esm": "^3.2.25",
     "jest": "^26.6.3",
-    "keymaster": "^1.6.2",
     "lerna": "^3.22.1",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
-    "mitt": "^2.1.0",
-    "number-precision": "^1.5.0",
     "rollup": "^2.40.0",
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
-    "screenfull": "^5.1.0",
-    "stateshot": "^1.3.3",
     "ts-jest": "^26.5.3",
-    "typescript": "^4.2.3",
-    "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12",
-    "vue3": "npm:vue@3",
-    "vuex": "^3.6.2"
-  },
-  "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.3",
-    "vue-demi": "^0.7.1"
+    "typescript": "^4.2.3"
   }
 }
