chore: update docs dev script

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.2.10",
   "description": "A collection of Vue composition-api utilities",
   "scripts": {
-    "docs:dev:v2": "vue-demi-switch 2 && npm run dev:v2 --prefix docs",
-    "docs:dev:v3": "vue-demi-switch 3 vue3 && npm run dev:v3 --prefix docs",
-    "docs:build:v2": "npm run build:v2 --prefix docs",
-    "docs:build:v3": "npm run build:v3 --prefix docs",
+    "docs:dev:v2": "npm run dev --prefix docs/v2",
+    "docs:dev:v3": "npm run dev --prefix docs/v3",
+    "docs:build:v2": "npm run build --prefix docs/v2",
+    "docs:build:v3": "npm run build --prefix docs/v3",
     "docs:deploy": "sh deploy.sh",
     "build": "rollup -c rollup.config.js",
     "release": "lerna publish",
