--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -43,7 +43,7 @@
     "axios": "^0.24.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "vue-demi": "^0.11.4"
+    "vue-demi": "0.10.0"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
