--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,7 @@
     "number-precision": "^1.5.0",
     "screenfull": "^5.1.0",
     "stateshot": "^1.3.3",
-    "vue-demi": "^0.11.4"
+    "vue-demi": "0.10.0"
   },
   "devDependencies": {
     "@types/keymaster": "^1.6.30",
