--- a/packages/vuex/package.json
+++ b/packages/vuex/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.2.4",
-    "vue-demi": "^0.11.4",
+    "vue-demi": "0.10.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
