--- a/docs/v3/package.json
+++ b/docs/v3/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vitepress dev --port 4949",
-    "build": "vitess build"
+    "build": "vitepress build"
   },
   "dependencies": {
     "@vueblocks/vue-use-axios": "^0.2.6",
