--- a/examples/vue2-demo/package.json
+++ b/examples/vue2-demo/package.json
@@ -8,27 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.11",
-    "@vueblocks/vue-use-core": "^0.2.10",
-    "@vueblocks/vue-use-vuex": "^0.2.10",
-    "core-js": "^3.6.5",
+    "@vue/composition-api": "^1.2.4",
+    "@vueblocks/vue-use-core": "^0.2.11",
+    "@vueblocks/vue-use-vuex": "^0.2.11",
     "vue": "^2.6.11",
-    "vue-demi": "^0.9.1",
-    "vuex": "^3.6.2"
+    "vue-demi": "0.10.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -38,10 +43,11 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "@vue/standard"
+      "@vue/standard",
+      "@vue/typescript/recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "ecmaVersion": 2020
     },
     "rules": {}
   },
