--- a/examples/vue3-demo/package.json
+++ b/examples/vue3-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-demo",
+  "name": "vue3-ts",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,30 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vueblocks/vue-use-core": "^0.2.1",
-    "@vueblocks/vue-use-vuex": "^0.2.0",
-    "core-js": "^3.6.5",
+    "@vueblocks/vue-use-core": "^0.2.11",
+    "@vueblocks/vue-use-vuex": "^0.2.11",
     "vue": "^3.0.0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "typescript": "~3.9.3"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "typescript": "~4.1.5"
   },
   "eslintConfig": {
     "root": true,
@@ -46,9 +46,7 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {
-      "@typescript-eslint/no-explicit-any": 0
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
